Rescoping prior profile data in Autofill settings to correct regression.

BUG=607071

Review-Url: https://codereview.chromium.org/1924863002
Cr-Commit-Position: refs/heads/master@{#390142}

Former-commit-id: 1e5379ebd8051916ea19707068871a14f29164d1